# furniture

./: db.sqlite3  pyproject.toml
assets/css/: style.css
blogs/: admin.py  apps.py  models.py  urls.py  views.py
blogs/migrations/: 0001_initial.py  0002_alter_author_options_alter_blog_options_and_more.py
core/: settings.py  urls.py
locale/en/LC_MESSAGES/: django.po
locale/uz/LC_MESSAGES/: django.po
products/: admin.py  models.py  translation.py  views.py
products/management/commands/: seed_products.py
products/migrations/: 0001_initial.py  0002_alter_productcategory_options_and_more.py
shared/: admin.py  apps.py  forms.py  models.py  translation.py  views.py
shared/migrations/: 0001_initial.py  0002_contact.py  0003_alter_aboutus_options_alter_contact_options_and_more.py
templates/blogs/: blog-detail.html  blogs-list.html
templates/layout/: base.html  footer.html  header.html  mobile-left.html  mobile-right.html
templates/products/: cart.html  checkout.html  product-detail.html  products-list.html  wishlist.html
templates/shared/: about-us.html  contact.html  home.html
templates/users/: account.html  login.html  register.html  reset-password.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_delete_customusermanager.py  0003_customuser_created_at_customuser_updated_at.py  0004_rename_user_name_customuser_username.py  0005_alter_customuser_options_alter_customuser_created_at_and_more.py  0006_alter_customuser_options_alter_customuser_email_and_more.py
